app working, plant search implemented but no dropdown

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,6 +21,9 @@
                 Add an entry
             </button>
 
+            <!-- Plant Search Component -->
+            <app-plant-search></app-plant-search>
+
             <!-- Notification Form -->
             <form [formGroup]="notificationForm" (ngSubmit)="createNotification()">
                 <mat-form-field>
