--- a/src/app/components/plant-search/plant-search.component.html
+++ b/src/app/components/plant-search/plant-search.component.html
@@ -1,12 +1,13 @@
 <div [formGroup]="plantSearchForm">
   <mat-form-field>
-    <mat-label>Search Plants</mat-label>
-    <input matInput formControlName="query" placeholder="Enter plant name">
+    <mat-label>Search for a plant</mat-label>
+    <input matInput formControlName="query">
   </mat-form-field>
-  <mat-list>
-    <mat-list-item *ngFor="let plant of searchResults" (click)="selectPlant(plant)">
-      {{ plant.name }}
-    </mat-list-item>
-  </mat-list>
 </div>
+
+<mat-list>
+  <mat-list-item *ngFor="let plant of searchResults$ | async" (click)="selectPlant(plant)">
+    {{ plant.common_name }}
+  </mat-list-item>
+</mat-list>
 
