--- a/src/app/plant-search.component.html
+++ b/src/app/plant-search.component.html
@@ -1,13 +1,12 @@
 <div [formGroup]="plantSearchForm">
   <mat-form-field>
-    <input matInput formControlName="query" placeholder="Search for a plant">
+    <mat-label>Search for a plant</mat-label>
+    <input matInput formControlName="query">
   </mat-form-field>
 </div>
-<div *ngIf="searchResults$ | async as searchResults">
-  <mat-list>
-    <mat-list-item *ngFor="let plant of searchResults" (click)="selectPlant(plant)">
-      {{ plant.common_name }} ({{ plant.scientific_name }})
-    </mat-list-item>
-  </mat-list>
-</div>
+<mat-list>
+  <mat-list-item *ngFor="let plant of searchResults$ | async" (click)="selectPlant(plant)">
+    {{ plant.common_name }}
+  </mat-list-item>
+</mat-list>
 
