Adding new plants to db working

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,6 +24,9 @@
             <!-- Plant Search Component -->
             <app-plant-search></app-plant-search>
 
+            <!-- Add Plant Component -->
+            <app-add-plant></app-add-plant>
+
             <!-- Notification Form -->
             <form [formGroup]="notificationForm" (ngSubmit)="createNotification()">
                 <mat-form-field>
