Implemented Delete plant from vegetable_maturity table in db

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,11 +21,14 @@
                 Add an entry
             </button>
 
+
             <!-- Plant Search Component -->
             <app-plant-search></app-plant-search>
 
             <!-- Add Plant Component -->
             <app-add-plant></app-add-plant>
+
+            <app-list-plants-list></app-list-plants-list>
 
             <!-- Notification Form -->
             <form [formGroup]="notificationForm" (ngSubmit)="createNotification()">
