updated Juno and delete working (sort of)

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,6 +28,8 @@
             <!-- Add Plant Component -->
             <app-add-plant></app-add-plant>
 
+            <app-delete-my-plant></app-delete-my-plant>
+
             <app-list-plants-list></app-list-plants-list>
 
             <!-- Notification Form -->
