--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="diaryForm">
   <mat-form-field appearance="fill">
     <mat-label>Your diary entry</mat-label>
-    <textarea matInput rows="5" formControlName="entry"></textarea>
+    <textarea matInput rows="5" formControlName="plantId"></textarea>
   </mat-form-field>
 
   <input
